# excitation

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: excitation_example.cc
examples/arduino/excitation_example/: excitation_example.ino
examples/cmake/: excitation_example.cc
include/excitation/: chirp.h  doublet.h  excitation.h  multisine.h  pulse.h  sampled.h
src/: chirp.cpp  chirp.h  doublet.cpp  doublet.h  excitation.h  multisine.cpp  multisine.h  pulse.cpp  pulse.h  sampled.cpp  sampled.h
